kubernetes/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: test-server
  labels:
    app: test-server
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: test-server
    spec:
      containers:
      - name: test-server
        image: gcr.io/google.com/zbutcher-test/test-server
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        args:
        - --server-port=80
        - --health-port=80
        - --healthy=true
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 2
          periodSeconds: 2
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 2
          periodSeconds: 2
