kubernetes/nginx_basic.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata: 
  name: nginx-ingress-controller
spec: 
  replicas: 1
  revisionHistoryLimit: 3
  template: 
    metadata: 
      labels: 
        k8s-app: nginx-ingress-lb
    spec: 
      containers: 
        - args: 
           - /nginx-ingress-controller
           - "--default-backend-service=$(POD_NAMESPACE)/test-server"
#           - "--default-ssl-certificate=$(POD_NAMESPACE)/tls-certificate"
          image: "gcr.io/google_containers/nginx-ingress-controller:0.9.0-beta.15"
          imagePullPolicy: Always
#          livenessProbe: 
#            httpGet: 
#              path: /healthz
#              port: 10254
#              scheme: HTTP
#            initialDelaySeconds: 10
#            timeoutSeconds: 5
          name: nginx-ingress-controller
          ports: 
            - containerPort: 80
              name: http
              protocol: TCP
#            - containerPort: 443
#              name: https
#              protocol: TCP
#          volumeMounts: 
#            - mountPath: /etc/nginx-ssl/dhparam
#              name: tls-dhparam-vol
      terminationGracePeriodSeconds: 60
#      volumes: 
#        - name: tls-dhparam-vol
#          secret: 
#            secretName: tls-dhparam
