kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-server
  labels:
    app: test-server
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
  selector:
    app: test-server
