kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-server
  annotations:
    kubernetes.io/ingress.class: nginx #istio
spec:
  rules:
  - http:
      paths:
      - path: /echo
        backend:
          serviceName: test-server
          servicePort: 80
